# code-g

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bad_python_poem.txt  demo_test.txt  output.txt  poem.txt
_old_src/: tui.rs
src/: diff.rs  lib.rs  main.rs  tui.rs  working.rs
src/chat/: error.rs  event.rs  memory.rs  mod.rs  session.rs  system_prompt.rs
src/chat_client/: error.rs  mock.rs  mod.rs  model.rs  traits.rs
src/chat_session/: mock.rs  mod.rs  traits.rs
src/client/: error.rs  mock.rs  mod.rs  model.rs  models.rs  traits.rs
src/openai/: client.rs  error.rs  mock.rs  mod.rs  model.rs  schema.rs  traits.rs
src/session/: error.rs  event.rs  memory.rs  mod.rs  session.rs  system_prompt.rs
src/tools/: change_manager.rs  edit_file.rs  execute_command.rs  managed_registry.rs  mod.rs  read_file.rs  registry.rs  search_files.rs  tool.rs  traits.rs  write_file.rs
src/tui/: diff.rs  formatting.rs  mod.rs  model.rs  models.rs  state.rs  text_formatter.rs  tool_formatter.rs  tui.rs
src/tui/formatter/: mod.rs  terminal.rs  text.rs  tool.rs  tool_formatter.rs
tests/: chat_session.rs  chat_session_approvals.rs  chat_session_basic.rs  chat_session_e2e.rs  chat_session_full.rs  chat_session_live.rs  chat_session_system_prompt.rs  chat_session_tool_calls.rs  openai_client.rs  tools_edit_file.rs  tools_execute_command.rs  tools_read_file.rs  tools_search_files.rs  tools_write_file.rs
tests/fixtures/: sample.json
tests/helpers/: assertions.rs  mod.rs  scenario.rs
tests/helpers/mocks/: chat_client.rs  chat_session.rs  event_handler.rs  mod.rs  (+1 more)
(+10 files in other folders)
