[package]
name = "code-g"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio   = { version = "1.37", features = ["full"] }
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow  = "1.0"
dotenvy = "0.15"          # optional convenience – picks up `OPENAI_API_KEY` from `.env`
